--- a/Shell/App.config
+++ b/Shell/App.config
@@ -15,6 +15,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="ModelContext" connectionString="metadata=res://*/ChildCareModel.csdl|res://*/ChildCareModel.ssdl|res://*/ChildCareModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\Demarsch;initial catalog=ChildCare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="Logs\log.txt" />
@@ -27,9 +30,15 @@
         <conversionPattern value="%date %level %-10logger - %message%newline" />
       </layout>
     </appender>
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level %-10logger - %message%newline" />
+      </layout>
+    </appender>
     <root>
       <level value="ALL" />
       <appender-ref ref="RollingFileAppender" />
+      <appender-ref ref="TraceAppender" />
     </root>
   </log4net>
 </configuration>
