- Closes #85 - Unit tests
- Added retrieving patient info in patient search

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -50,8 +50,10 @@
     <Compile Include="Expressions\CompositeSimilarityExpressionProvider.cs" />
     <Compile Include="Expressions\DateBasedSimilarityExpressionProvider.cs" />
     <Compile Include="Expressions\ParameterReplacer.cs" />
+    <Compile Include="Extensions\CacheServiceExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\LogExtensions.cs" />
+    <Compile Include="Misc\DateTimeFormats.cs" />
     <Compile Include="Misc\DisposableQueryable.cs" />
     <Compile Include="Services\Interfaces\ICacheService.cs" />
     <Compile Include="Misc\IDisposableQueryable.cs" />
