--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -104,6 +104,8 @@
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PartialClasses\Gender.cs" />
+    <Compile Include="PartialClasses\PersonIdentityDocument.cs" />
+    <Compile Include="PartialClasses\PersonName.cs" />
     <Compile Include="Services\Implementations\DbContextCacheService.cs" />
     <Compile Include="Services\Implementations\DbContextProvider.cs" />
     <Compile Include="Country.cs">
