- Fixes to person search process
- Partially working text highlighting

--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -57,7 +57,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Behaviors\TextHightlightBehavior.cs" />
+    <Compile Include="Behaviors\TextHighlightBehavior.cs" />
     <Compile Include="Converters\Converter.cs" />
     <Compile Include="Misc\StaticBoolean.cs" />
     <Compile Include="Mvvm\Mediators\BusyMediator.cs" />
@@ -65,9 +65,17 @@
     <Compile Include="Mvvm\Misc\ObservableCollectionEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="Resources\ResourceDictionaries\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
