--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -103,6 +103,11 @@
     <Compile Include="CommissionType.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Misc\DisposableQueryable.cs" />
+    <Compile Include="Misc\EmptyDbAsyncEnumerable.cs" />
+    <Compile Include="Misc\EmptyDbAsyncEnumerator.cs" />
+    <Compile Include="Misc\EmptyDbAsyncQueryProvider.cs" />
+    <Compile Include="Misc\IDisposableQueryable.cs" />
     <Compile Include="PartialClasses\Gender.cs" />
     <Compile Include="PartialClasses\PersonIdentityDocument.cs" />
     <Compile Include="PartialClasses\PersonName.cs" />
