--- a/Test/PatientSearchModule.Test/PatientSearchModule.Test.csproj
+++ b/Test/PatientSearchModule.Test/PatientSearchModule.Test.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\User Input Processing\Input Normalization\UserInputNormalizerTest.cs" />
+    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonNamesSearchExpressionProviderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\FoundPatientViewModelTest.cs" />
   </ItemGroup>
@@ -59,6 +61,10 @@
     <ProjectReference Include="..\..\Core.Data\Core.Data.csproj">
       <Project>{304F5AEB-4189-4C9F-96DA-C32E57E5E1BE}</Project>
       <Name>Core.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Core\Core.csproj">
+      <Project>{CF75CDE2-002C-4113-824A-03A3B7C6847B}</Project>
+      <Name>Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\PatientSearchModule\PatientSearchModule.csproj">
       <Project>{08516E48-6E7C-4B45-9C9F-5C4125B17D09}</Project>
