--- a/MainLib/MainLib.csproj
+++ b/MainLib/MainLib.csproj
@@ -124,9 +124,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data transfer objects\ContractItemDTO.cs" />
-    <Compile Include="Data transfer objects\ThumbnailDTO.cs" />
-    <Compile Include="Data transfer objects\UserDTO.cs" />
     <Compile Include="Exception\UserFriendlyException.cs" />
     <Compile Include="Helpers\RecordTypesSuggestionProvider.cs" />
     <Compile Include="Helpers\PersonSuggestionProvider.cs" />
@@ -264,6 +261,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data transfer objects\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.1.28.3\build\Fody.targets" Condition="Exists('..\packages\Fody.1.28.3\build\Fody.targets')" />
