Minor changes in PersonVisitItemsList

--- a/Shell/App.config
+++ b/Shell/App.config
@@ -16,7 +16,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ModelContext" connectionString="metadata=res://*/ChildCareModel.csdl|res://*/ChildCareModel.ssdl|res://*/ChildCareModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\Demarsch;initial catalog=ChildCare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelContext" connectionString="metadata=res://*/ChildCareModel.csdl|res://*/ChildCareModel.ssdl|res://*/ChildCareModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ChildCare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
