--- a/PatientInfoModule/PatientInfoModule.csproj
+++ b/PatientInfoModule/PatientInfoModule.csproj
@@ -90,11 +90,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\EmptyPatientInfoViewModel.cs" />
     <Compile Include="ViewModels\ModuleHeaderViewModel.cs" />
+    <Compile Include="ViewModels\PatientInfoViewModel.cs" />
+    <Compile Include="Views\EmptyPatientInfo.xaml.cs">
+      <DependentUpon>EmptyPatientInfo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ModuleHeader.xaml.cs">
       <DependentUpon>ModuleHeader.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PatientInfo.xaml.cs">
+      <DependentUpon>PatientInfo.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -116,7 +125,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\EmptyPatientInfo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ModuleHeader.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PatientInfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
