--- a/Shell/Shell.csproj
+++ b/Shell/Shell.csproj
@@ -105,6 +105,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ShellWindowViewModel.cs" />
+    <Compile Include="ConventionBasedViewNameResolver.cs" />
     <Page Include="ShellWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
