--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -151,6 +151,9 @@
   <ItemGroup>
     <Resource Include="Images\Ok48x48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\AmbCard48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
