--- a/PatientInfoModule/PatientInfoModule.csproj
+++ b/PatientInfoModule/PatientInfoModule.csproj
@@ -90,17 +90,26 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Misc\Common.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ContractsHeaderViewModel.cs" />
+    <Compile Include="ViewModels\DocumentsHeaderViewModel.cs" />
     <Compile Include="ViewModels\EmptyPatientInfoViewModel.cs" />
-    <Compile Include="ViewModels\ModuleHeaderViewModel.cs" />
+    <Compile Include="ViewModels\CommonInfoHeaderViewModel.cs" />
     <Compile Include="ViewModels\PatientInfoViewModel.cs" />
+    <Compile Include="Views\ContractsHeader.xaml.cs">
+      <DependentUpon>ContractsHeader.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DocumentsHeader.xaml.cs">
+      <DependentUpon>DocumentsHeader.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EmptyPatientInfo.xaml.cs">
       <DependentUpon>EmptyPatientInfo.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ModuleHeader.xaml.cs">
-      <DependentUpon>ModuleHeader.xaml</DependentUpon>
+    <Compile Include="Views\CommonInfoHeader.xaml.cs">
+      <DependentUpon>CommonInfoHeader.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PatientInfo.xaml.cs">
       <DependentUpon>PatientInfo.xaml</DependentUpon>
@@ -125,11 +134,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\ContractsHeader.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\DocumentsHeader.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\EmptyPatientInfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ModuleHeader.xaml">
+    <Page Include="Views\CommonInfoHeader.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
