--- a/PatientRecords/PatientRecords.csproj
+++ b/PatientRecords/PatientRecords.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E0D997F-374E-43BE-9617-8DA82504B7C8}</ProjectGuid>
+    <ProjectGuid>{5BCD0D82-296D-43D3-8AD6-B639BFE06A7A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shell.Shared</RootNamespace>
-    <AssemblyName>Shell.Shared</AssemblyName>
+    <RootNamespace>PatientRecords</RootNamespace>
+    <AssemblyName>PatientRecords</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,16 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RegionNames.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WellKnownModuleNames.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\AmbCard48x48.png" />
-    <Resource Include="Images\Assignment48x48.png" />
-    <Resource Include="Images\Ok48x48.png" />
-    <Resource Include="Images\Record48x48.png" />
-    <Resource Include="Images\Visit48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
